[package]
edition = "2021"
name = "deploy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.11.1"
clap = "2.34.0"
directories = "4.0.1"
futures = "0.3.19"
lazy_static = "1.4.0"
reqwest = {version = "0.11.8", features = ["json"]}
serde = "1.0"
serde_json = "1.0"
termion = "1.5.6"
tokio = {version = "1", features = ["full"]}
